[package]
name = "melies-cli"
version = "0.1.0"
edition = "2024"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"

[dependencies]
clap = { version = "4.5.52", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tf-demo-parser = { path = "./parser" }
bitbuffer = { version = "0.11.0", features = ["serde"] }
num_enum = "0.5.7"
parse-display = "0.8.0"
steamid-ng = "1.0.0"